--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,59 @@
-.App {
-  text-align: center;
+* {
+    box-sizing: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+a {
+    text-decoration: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header {
+    height: 95px;
+    position: fixed;
+    width: 100%;
+    background-color: #343a40;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+    height: 100px;
+    float: left;
+    margin-left: 20px;
+    display: inline-block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo_text {
+    font-size: 38px;
+    margin: 22px 0 0 34px;
+    color: #fff;
+    display: inline-block;
+    font-weight: bold;
+}
+
+.nav {
+    display: inline-block;
+    margin-left: 50px;
+}
+
+.nav li {
+    margin-right: 100px;
+    font-size: 25px;
+    display: inline-block;
+}
+
+.nav li a {
+    color: #fff;
+    background-color: #17a2b8;
+    padding: 10px;
+    border-radius: 6px;
+}
+
+.login {
+    display: inline-block;
+}
+
+.login a {
+    color: #17a2b8;
+    border: 1px solid #17a2b8;
+    border-radius: 8px;
+    margin-right: 5px;
+    padding: 5px;
 }
