--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@ a {
 
 .header {
     height: 95px;
-    position: fixed;
     width: 100%;
     background-color: #343a40;
 }
@@ -56,4 +55,27 @@ a {
     border-radius: 8px;
     margin-right: 5px;
     padding: 5px;
+}
+
+.sidebar {
+    float: left;
+}
+
+.sidebar ul li {
+    list-style: none;
+    font-size: 26px;
+    color: #fff;
+    background-color: #6c757d;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.sidebar ul a:visited {
+    color: #fff;
+}
+
+.sidebar ul li:hover {
+    padding: 7px;
+    color: #0ff;
 }
