--- a/src/App.css
+++ b/src/App.css
@@ -114,3 +114,52 @@ a {
     padding: 18px;
     border-bottom: 1px solid #d8d8d8;
 }
+
+.footer {
+    background-color: #343a40;
+    padding-bottom: 10px;
+}
+
+.footer .links ul {
+    margin: 0;
+    padding: 0;
+    margin-left: 10px;
+    padding-bottom: 30px;
+    padding-top: 30px;
+}
+
+.footer .links a li {
+    list-style: none;
+    display: inline-block;
+    padding: 12px 57px;
+    border: 2px solid #007bff;
+    border-radius: 3px;
+    background-color: #007bff;
+}
+
+.footer .links a {
+    color: #000;
+    margin-right: 106px;
+}
+
+.footer .links ul :last-child {
+    margin-right: 0px;
+}
+
+.footer .links ul a li:hover {
+    color: #fff;
+}
+
+.footer .copyright_info {
+    text-align: center;
+    font-size: 22px;
+}
+
+.footer .copyright_info a {
+    color: #fff;
+    margin-top: 10px;
+}
+
+.footer .copyright_info a:hover {
+    color: #0472de;
+}
